--- a/layout.html
+++ b/layout.html
@@ -20,6 +20,6 @@
     <!-- footer-->
     <footer>Copyright © 2016 by <a href="https://github.com/zp1996" target="_blank" class="author">zp1996</a></footer>
     <script type="text/javascript" src="js/image.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/client.js"></script>
   </body>
 </html>
