--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <li><a id="toGray">灰度图</a></li>
           <li><a id="toOld">原图</a></li>
           <li><a id="toInverse">反转</a></li>
+          <li><a id="toMirror">镜像</a></li>
           <li><a id="toMosaic">加马赛克</a></li>
           <li><a id="ConBrBaseFilter">改亮度与对比度：</a></li>
         </ul>
