--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
           <li><a id="toInverse">反转</a></li>
           <li><a id="toMirror">镜像</a></li>
           <li><a id="toMosaic">加马赛克</a></li>
+          <li><a id="GaosiBulr">高斯模糊</a></li>
+          <li><a id="toSketch">素描效果</a></li>
           <li><a id="ConBrBaseFilter">改亮度与对比度：</a></li>
         </ul>
         <div id="radix-change"> 
