--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>LsgoImage</title>
   </head>
   <body>
+    <!-- mask-->
+    <div id="mask">
+      <div class="loading">
+        <div class="spinner">
+          <div class="spinner-container container1">
+                <div class="circle1"></div>
+                <div class="circle2"></div>
+                <div class="circle3"></div>
+                <div class="circle4"></div>
+          </div>
+          <div class="spinner-container container2">
+                <div class="circle1"></div>
+                <div class="circle2"></div>
+                <div class="circle3"></div>
+                <div class="circle4"></div>
+          </div>
+          <div class="spinner-container container3">
+                <div class="circle1"></div>
+                <div class="circle2"></div>
+                <div class="circle3"></div>
+                <div class="circle4"></div>
+          </div>
+        </div>
+        <div class="layer-text">正在加载中...</div>
+      </div>
+    </div>
     <!-- header-->
     <header>
       <div class="header-container">
