--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <div id="mask">
       <div class="loading">
         <div class="spinner">
-          <div class="spinner-container container1">
+          <div class="spinner-container mask-container1">
                 <div class="circle1"></div>
                 <div class="circle2"></div>
                 <div class="circle3"></div>
                 <div class="circle4"></div>
           </div>
-          <div class="spinner-container container2">
+          <div class="spinner-container mask-container2">
                 <div class="circle1"></div>
                 <div class="circle2"></div>
                 <div class="circle3"></div>
                 <div class="circle4"></div>
           </div>
-          <div class="spinner-container container3">
+          <div class="spinner-container mask-container3">
                 <div class="circle1"></div>
                 <div class="circle2"></div>
                 <div class="circle3"></div>
