--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="circle4"></div>
           </div>
         </div>
-        <div class="layer-text">正在加载中...</div>
+        <div class="layer-text">wait a minute...</div>
       </div>
     </div>
     <!-- header-->
